--- a/css/custom.css
+++ b/css/custom.css
@@ -136,18 +136,17 @@ padding:120px 0
 }
 
 section h2.section-heading {
-font-size:40px;
-margin-top:0;
-margin-bottom:15px
+margin-top:0 0 15px 0;
+font-size:40px
 }
 
 section h3.section-subheading {
-font-size:16px;
-font-family:"Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+margin-bottom:75px;
 text-transform:none;
+font-family:"Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
 font-style:italic;
-font-weight:400;
-margin-bottom:75px
+font-size:16px;
+font-weight:400
 }
 
 @media (min-width: 768px) {
@@ -1565,8 +1564,6 @@ color:#878787;
 font-size:16px
 }
 
-
-
 .campo-pesquisa {
 margin-top:200px
 }
@@ -1635,16 +1632,6 @@ padding:0 20px;
 display:block;
 font-family:'Nunito',sans-serif!important;
 font-weight:900
-}
-
-#transparencia {
-padding:70px 0
-}
-
-#transparencia h1 {
-color:#0072a4;
-font-size:2.5em;
-padding-bottom:20px
 }
 
 .conteiner-transparencia-form {
