--- a/css/buttons.css
+++ b/css/buttons.css
@@ -3,77 +3,7 @@
  * @subpackage HEELJ
  * @since HEELJ 1.0 Beta
 */
-/*
-.btn-link,.btn-white,.btn-blue,.btn-blue-fill,.btn-purple,.btn-purple-fill {
-padding-left:30px!important;
-padding-right:30px!important;
-margin-top:20px!important;
-margin-bottom:20px;
-transition:all .4s;
-font-size:1em!important;
-font-weight:400!important;
-font-style:italic
-}
 
-.btn-white {
-border:1px solid #fff;
-background:transparent;
-color:#fff
-}
-
-.btn-white:hover {
-border:1px solid #fff;
-background:#fff;
-color:#4048b4
-}
-
-.btn-blue {
-border:1px solid #0072a4;
-background:transparent;
-color:#0072a4!important
-}
-
-.btn-blue:hover {
-border:1px solid #009ee4;
-background:#009ee4;
-color:#fff!important
-}
-
-.btn-blue-fill {
-border:1px solid #009ee4;
-background:#009ee4;
-color:#fff
-}
-
-.btn-blue-fill:hover {
-border:1px solid #4048b4;
-background:#4048b4;
-color:#fff
-}
-
-.btn-purple {
-border:1px solid #4048b4;
-background:transparent;
-color:#4048b4
-}
-
-.btn-purple:hover {
-border:1px solid #4048b4;
-background:#4048b4;
-color:#fff
-}
-
-.btn-purple-fill {
-border:1px solid #4048b4;
-background:#4048b4;
-color:#fff
-}
-
-.btn-purple-fill:hover {
-border:1px solid #073b5a;
-background:#073b5a;
-color:#fff
-}
 /* ===== Buttons CSS ===== */
 .btn.btn-sm.btn-link {
 color:#0b448f !important;
@@ -145,4 +75,8 @@ border:1px solid #4048b4;
 background:#073b5a;
 color:#fff;
 border:1px solid #073b5a;
+}
+
+.btn:focus,.btn:active,.btn.active,.btn:active:focus {
+outline:none
 }
