--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
 Theme Name: HEELJ
 Author: SMART7 - Digital LTDA
-Author URI: smart7.com.br
+Author URI: http://smart7.com.br
 Description: Tema desenvolvido em Fevereiro de 2018 para o Hospital Ernestina Lopes Jaime, administrado pela Organização Social IBGH (Instituto Brasileiro de Gestão Hospitalar)
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: hospital, bootstrap, responsive, Organização Social, one-column, two-columns, post-formats
+Tags: Hospital, Bootstrap, Responsive, Organização Social, One-column, Two-columns, Post-formats
 Text Domain: IBGH Unidades
 */
 
